load("@rules_cc//cc:defs.bzl", "cc_library")

_detail_hdrs = [
    "include/boost/process/detail/*.hpp",
    "include/boost/process/detail/traits/*.hpp",
]

_windows_hdrs = [
    "include/boost/process/detail/windows/*.hpp",
]

_posix_hdrs = [
    "include/boost/process/detail/posix/*.hpp",
]

cc_library(
    name = "process_posix_detail",
    tags = ["manual"],
    hdrs = glob(_posix_hdrs),
    deps = [
        "@boost//libs/tokenizer",
    ],
)

cc_library(
    name = "process_windows_detail",
    target_compatible_with = ["@platforms//os:windows"],
    hdrs = glob(_windows_hdrs),
    linkopts = ["-DEFAULTLIB:shell32"],
)

cc_library(
    name = "process_detail",
    hdrs = glob(_detail_hdrs),
    deps = [
        "@boost//libs/filesystem",
        "@boost//libs/algorithm",
        "@boost//libs/system",
        "@boost//libs/optional",
        "@boost//libs/asio",
        "@boost//libs/type_index",
    ],
)

cc_library(
    name = "process",
    visibility = ["//visibility:public"],
    includes = ["include"],
    hdrs = glob(["include/boost/**/*.hpp"], exclude = _detail_hdrs + _windows_hdrs + _posix_hdrs),
    deps = [
        ":process_detail",
        "@boost//libs/fusion",
    ] + select({
        "@platforms//os:windows": [":process_windows_detail"],
        "//conditions:default": [":process_posix_detail"],
    }),
)
